--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>Frontend Mentor | News homepage</title>
   <link rel="stylesheet" href="/style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-  <script src="script.js"></script>
+  <script src="/script.js"></script>
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
 
 </head>
