--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
 
   <title>Frontend Mentor | News homepage</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="./style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-  <script src="/script.js"></script>
+  <script src="./script.js"></script>
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
 
 </head>
