--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <section class="section3">
         <div class="card-group">
           <div class="card">
-            <img class="card-img-top" src="/assets/images/image-retro-pcs.jpg" alt="Card image cap">
+            <img class="card-img-top" src="./assets/images/image-retro-pcs.jpg" alt="Card image cap">
             <div class="card-body">
               <span class="subtitle">01</span>
               <h4 class="card-title">Reviving Retro PCs</h4>
@@ -83,7 +83,7 @@
             </div>
           </div>
           <div class="card">
-            <img class="card-img-top" src="/assets/images/image-top-laptops.jpg" alt="Card image cap">
+            <img class="card-img-top" src="./assets/images/image-top-laptops.jpg" alt="Card image cap">
             <div class="card-body">
               <span class="subtitle">02</span>
               <h4 class="card-title">Top 10 Laptops of 2022</h4>
@@ -91,7 +91,7 @@
             </div>
           </div>
           <div class="card">
-            <img class="card-img-top" src="/assets/images/image-gaming-growth.jpg" alt="Card image cap">
+            <img class="card-img-top" src="./assets/images/image-gaming-growth.jpg" alt="Card image cap">
             <div class="card-body">
               <span class="subtitle">03</span>
               <h4 class="card-title">The Growth of Gaming</h4>
